UE Auth (bearer token) and swagger auth included
