# routes/api_v1.js
@@ -1,6 +1,7 @@
 import express from 'express';
 import email from '../services/yourservice/api';
 import log from '../services/log/api';
+import auth from '../services/auth/api';
 
 const pJson = require('../package.json');
 
@@ -25,9 +26,9 @@ router.get('/helloworld', email.helloworld);
 /**
  * Log API Calls
  */
-router.get('/logs', log.getLogs);
-router.get('/logs/:code', log.getLogByCode);
-router.get('/logs/:code/:timestamp', log.getLog);
-router.post('/logs', log.writeLog);
+router.get('/logs', auth.isBearerAuthenticated, log.getLogs);
+router.get('/logs/:code', auth.isBearerAuthenticated, log.getLogByCode);
+router.get('/logs/:code/:timestamp', auth.isBearerAuthenticated, log.getLog);
+router.post('/logs', auth.isBearerAuthenticated, log.writeLog);
 
 export default router;
