# swagger.yaml
@@ -46,10 +46,8 @@ paths:
           description: Invalid input
         '500':
           description: Unknown error
-      #security:
-      #  - petstore_auth:
-      #      - 'write:pets'
-      #      - 'read:pets'
+      security:
+        - UEAuth: []
     get:
       tags:
         - logs
@@ -63,10 +61,8 @@ paths:
           description: successful operation
           schema:
             $ref: '#/definitions/Logs'
-      #security:
-      #  - petstore_auth:
-      #      - 'write:pets'
-      #      - 'read:pets'
+      security:
+        - UEAuth: []
   '/logs/{code}':
     get:
       tags:
@@ -89,8 +85,8 @@ paths:
             $ref: '#/definitions/Logs'
         '400':
           description: Invalid code supplied
-      #security:
-      #  - api_key: []
+      security:
+        - UEAuth: []
   '/logs/{code}/{timestamp}':
     get:
       tags:
@@ -121,21 +117,15 @@ paths:
           description: Invalid code supplied
         '404':
           description: Log not found
-      #security:
-      #  - api_key: []
+      security:
+        - UEAuth: []
 
-#securityDefinitions:
-#  petstore_auth:
-#    type: oauth2
-#    authorizationUrl: 'http://petstore.swagger.io/oauth/dialog'
-#    flow: implicit
-#    scopes:
-#      'write:pets': modify pets in your account
-#      'read:pets': read your pets
-#  api_key:
-#    type: apiKey
-#    name: api_key
-#    in: header
+securityDefinitions:
+  UEAuth:
+    type: apiKey
+    name: Authorization
+    in: header
+    description: For both UEAuth and other Bearer based tokens, type in "Bearer " followed by your Token.
 definitions:
   Log:
     type: object
